tests/ui/deriving/issue-103157.stderr
error[E0277]: the trait bound `f64: Eq` is not satisfied
  --> $DIR/issue-103157.rs:6:11
   |
LL | #[derive(PartialEq, Eq)]
   |                     -- in this derive macro expansion
...
LL |     Float(Option<f64>),
   |           ^^^^^^^^^^^ the trait `Eq` is not implemented for `f64`
   |
   = help: the following other types implement trait `Eq`:
             isize
             i8
             i16
             i32
             i64
             i128
             usize
             u8
           and 4 others
   = note: required for `Option<f64>` to implement `Eq`
note: required by a bound in `AssertParamIsEq`
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
   = note: this error originates in the derive macro `Eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
